  Howto:
  To export multiple SQL results right click or open tools popup (ctl+t) and choose "sql2file"
  on multiple SQL queries (separated by statement separators) to open the file export dialog.
  To export multiple SQL result UI tables execute multiple SQLs (ctrl+enter).
  Then right click one of the UI result tables to open the file export dialog.

Bug fixes:

#1517 Global preferences --> tab "general" was not correctly scrolled.

#1516 Updated default JDBC driver definition for MariaDB to driver version 3.x.

JDBC driver list:
  Web site URLs from default driver definitions (default_drivers.xml) were not displayed.

JDBC driver list: Fixed repaint problems when default drivers were copied into the driver list.

#1515 File export raised IllegalArgumentException when used the first time.

DBDiff Plugin: Several fixes for tabular diffs of DB tables.
  Note that side-by-side diffs are preferable.

Change tracking: Positioning of split slider in GIT revision dialog did not work.
  To open the GIT revisions dialog right click the SQL editor's left gutter.
  Note that the GIT revision dialog is available only when change tracking by GIT must be used.

Fixed NullPointerException when rerunning SQL result.

DB2 Plugin: Fixed trigger details for AS400.

Table cell data popup:
  Reformat button unintentionally triggered file export.

#1513 NullPointerException when SQL results were displayed as text.

Hibernate Plugin:
  HQL execution raised ClassNotFoundException if mapped plain value fields were not of JDK types.

Graph Plugin --> Query builder mode: Fixed double click selection in column text field.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/11 (once more)
  H2 Plugin: For H2 version 2.* the Plugin's way to access
  the databases internal information schema for index details was fixed.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/11
  H2 DB versions greater than 2.* didn't show indexes in the Object tree's index details tab.